Update requirements.txt with project dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-torch
-torchvision
-rhino3dm
-Pillow
-numpy
+torch>=2.0.0
+torchvision>=0.15.0
+opencv-python>=4.8.0
+Pillow>=10.0.0
+numpy>=1.24.0
+rhino3dm>=8.0.0
